--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>Python Blyat!</title>
 </head>
 <body>
-<h1>Practical Answers - Ultra High Tech xD</h1>
+<h1>Practical Answers - Informatics Practices</h1>
+<img src ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/fyc.jfif">
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-1-01.py">Set-1 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-1-02.py">Set-1 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-2-01.py">Set-2 Q-1</a><br>
