--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Practical Answers - Informatics Practices</h1>
-<img src ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/fyc.jfif">
+<img src ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/fyc.jfif"><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-1-01.py">Set-1 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-1-02.py">Set-1 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-2-01.py">Set-2 Q-1</a><br>
