--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-4-01.py">Set-4 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-6-01.py">Set-6 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-7-01.py">Set-7 Q-1</a><br>
+<h3> and that's how you copy in practicals. kekekekek. xD</h3>
 </body>
 </html>
