--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-3-01.py">Set-3 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-3-02.py">Set-3 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-4-01.py">Set-4 Q-1</a><br>
+<a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-4-02.py">Set-4 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-5-01.py">Set-5 Q-1</a><br>
+<a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-1-02.py">Set-5 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-6-01.py">Set-6 Q-1</a><br>
+<a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-2-02.py">Set-6 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-7-01.py">Set-7 Q-1</a><br>
+<a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-3-02.py">Set-7 Q-2</a><br>
 <h3> and that's how you copy in practicals. kekekekek. xD</h3>
 </body>
 </html>
