--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-2-02.py">Set-6 Q-2</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-7-01.py">Set-7 Q-1</a><br>
 <a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/set-3-02.py">Set-7 Q-2</a><br>
+<a href ="https://raw.githubusercontent.com/gaganmalvi/pythonprojects/master/databasecreator.py">Database Creator - One Click</a><br>
 <h3> and that's how you copy in practicals. kekekekek. xD</h3>
 </body>
 </html>
